--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,6 +2,7 @@
   --color-grey-light-1: #f7f9f9;
   --color-grey-light-2: #f7f7f7;
   --color-grey-light-3: #e7e7e8;
+  --color-grey-light-4: #ccd6dd;
   --color-dark-grey: #536471;
   --color-black-1: #272c30;
   --color-black-2: #0f1419;
@@ -45,31 +46,22 @@ body {
   transition: all 0.15s; }
 
 .logo {
-  width: 2.7rem;
+  width: 3rem;
   margin: 2rem 3rem 1rem 3rem; }
 
 .logo-container {
   position: relative;
-  align-self: flex-start; }
-
-.logo-container::before {
-  content: "";
-  display: inline-block;
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 5rem;
   height: 5rem;
   border-radius: 50%;
-  margin: 0.6rem 0 0 1.8rem;
-  z-index: -10;
-  cursor: pointer;
-  visibility: hidden;
-  background-color: var(--color-button-blue-0);
-  transition: transform 0.15s; }
+  margin: 0.3rem 0 1rem 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer; }
 
-.logo-container:hover::before {
-  visibility: visible; }
+.logo-container:hover {
+  background-color: var(--color-button-blue-0); }
 
 .header {
   flex: 0 0 27rem;
@@ -99,7 +91,7 @@ body {
     color: var(--color-text-dark-1);
     font-weight: 800; }
   .side-nav__link:hover {
-    background-color: var --color-grey-light-3; }
+    background-color: var(--color-grey-light-3); }
   .side-nav__center {
     display: flex;
     align-items: center; }
@@ -121,6 +113,38 @@ body {
 
 .nav-btn:hover {
   background-color: var(--color-button-blue-3); }
+
+.account {
+  margin: 0 2rem 2rem 3rem;
+  display: flex;
+  align-items: center;
+  width: 100%; }
+  .account__icon-container {
+    position: relative;
+    width: 4.5rem;
+    height: 4.5rem;
+    border-radius: 50%;
+    margin-right: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: end;
+    cursor: pointer;
+    background-color: var(--color-grey-light-4);
+    color: var(--color-dark-grey); }
+  .account__icon-user {
+    width: 3.5rem;
+    height: 3.5rem;
+    fill: currentColor; }
+  .account__name-container {
+    margin-right: 6rem;
+    font-size: 0; }
+  .account__name {
+    font-size: 1.8rem; }
+  .account__name-other {
+    font-size: 1.8rem; }
+  .account__icon-more {
+    width: 3rem;
+    height: 3rem; }
 
 .container {
   display: flex; }
@@ -145,7 +169,9 @@ body {
   fill: currentColor; }
 
 .form__group {
-  display: flex;
+  display: flex; }
+
+.form__svg-container {
   color: var(--color-dark-grey); }
 
 .form__icon-user {
@@ -158,6 +184,19 @@ body {
   font-size: 2.2rem;
   font-family: inherit;
   border: none; }
+
+.form__label-container {
+  color: var(--color-button-blue-2); }
+
+.form__icon-globe {
+  width: 2rem;
+  height: 2rem;
+  fill: currentColor; }
+
+.form__label {
+  font-size: 1.5rem;
+  font-weight: 700;
+  letter-spacing: -0.7px; }
 
 .info-group {
   color: var(--color-button-blue-2); }
